# qbjs_deserializer_ffi

./: Cargo.toml  README.md  build.rs
src/: lib.rs
